# samples

./: .gitignore  README.md  index.md  login.html
2020/: .gitignore  build.gradle  cacerts
2020/2020firebase01/: .gitignore  README.md  build.gradle
2020/2020kotlin/: .gitignore  build.gradle
2020/KotlinNodeJs2/: settings.gradle.kts
2020/bs-card/: .gitignore  build.gradle  log2.csv
2020/flutter/: .gitignore  README.md  build.gradle  pubspec.yaml
2020/fsCustomAuthSvr/: .gitignore  README.md  build.gradle
2020/fsJsAgent/: .gitignore  README.md  build.gradle  package.json  settings.gradle
2020/fsSnmpAg/: .gitignore  build.gradle  readme.md
2020/kotjs_1/: .gitignore  build.gradle.kts  readme.md  settings.gradle.kts
2020/nodeKtSvr/: .gitignore  README.md  build.gradle  package.json
2020/src/: DockerFile  aes.kt  args.kt  coroutone.kt  env.kt  filesync.kt  fuelHTTPClient.kt  googleTrans.kt  googleTrans_UB.kt  httpServer.kt  jgit.kt  jna.kt  ktorHTTPClient.kt  ktorServer.kt  list.kt  mxbean.kt  poi.kt  script.kt  xpath.kt  yaml.kt  yaml_snakeyaml.kt
2020/test/: dc.xml  sb.xml  test.xlsx  testOfTest.kt
2020firebase01/: .gitignore  Dockerfile  README.md  build.gradle  road-to-iot-8efd3bfb2ccd.7z
2020firebase01/docker/: Dockerfile
2020firebase01/dt/: Dockerfile  cloudbuild.yaml
2020firebase01/src/: agent.kt  burst.kt  quickstart.kt  realtime.kt  test1.kt  test2.kt  test_set2.kt
2020kotlin/: .gitignore  build.gradle
2020kotlin/src/: f1.fun.kt  s1.flow.collect.kt  s4.flow.launch.cancel.kt  s6.cancel.kt  s7.flow.scope.kt  s7.flow.scope2.kt  s7.flow.scope3.kt
2020kotlinCoroutine/src/: flow.collect.kt  flow.collectLatest.kt  s2.flow.collectLatest.kt  s4.flow.launch.cancel.kt  s5.flow.launch.collectLatest.1_X.kt  s5.flow.launch.collectLatest.kt
2021/AgFsChromeKt/: README.md  build.gradle.kts  settings.gradle.kts
2021/AgFsNodeKt/: .gitignore  README.md  build.gradle.kts
2021/AgNodeKt/: README.md  build.gradle.kts  settings.gradle.kts
2021/AgNodeKtJs/: build.gradle.kts
2021/KtMP3/: build.gradle.kts
2021/MavenPlugin_Gradle_KtJvm/: build.gradle.kts
2021/PublishToMaven_Gradle_KtJvm/: build.gradle.kts  settings.gradle.kts
2021/SNMP4J/: .gitignore  settings.gradle.kts
2021/UniAgJvmKt/: .gitignore  README.md  build.gradle.kts
2021/WinKt/: build.gradle.kts
2021/flutter_auth0/: README.md  pubspec.yaml
2021/googlemaps/: index.html  index_pin.html
2021/gradle_PublishToMavenRepos/: .gitignore  build.gradle.kts  settings.gradle.kts
2021/iots/: .gitignore  build.gradle.kts  settings.gradle.kts
2021/kotlin2021/: build.gradle.kts
2021/kotlinCoroutine/: .gitignore  build.gradle.kts
2021/kotlinMP_win_SAMPLE/: .gitignore  README.md  build.gradle.kts
2021/ktorClientMP/: .gitignore  README.md  build.gradle.kts
2021/ktorClientsJvm/: .gitignore  build.gradle.kts  settings.gradle.kts
2021/ktorSvrJvm/: .gitignore  README.md  build.gradle.kts  keystore.jks
2021/nodeKt/: README.md  build.gradle.kts
2021/pahoj/: .gitignore  build.gradle.kts  settings.gradle.kts
2021/redmine_rest_js/: build.gradle.kts  readme.md  settings.gradle.kts
2021/redmine_rest_jvm/: build.gradle.kts  readme.md  settings.gradle.kts
2024/MongoDBAtlas/trial2/: .gitignore  CMakeLists.txt  main.cpp
2026/: .gitignore
2026/BS/BSRust/: .gitignore  Cargo.toml  Readme.md  bs-log.yaml  deck-kogyo.yaml  mise.toml
2026/BS/BSRust/decks/: deck-fara.yaml  deck.yaml
2026/BS/BSRust/src/: main.rs  web.rs
2026/BS/BSRust/src/ai/: decision.rs  encoder.rs  mod.rs  model.rs  train.rs
2026/BS/BSRust/src/cards/: bs76_035.rs  bs76_038.rs  bs76_041.rs  bs76_cx03.rs  bs76_t001.rs  bs76_x07.rs  mod.rs
2026/BS/BSRust/static/: index.html
2026/Firabases/10_FBSDK_TUI/: .gitignore  CMakeLists.txt  History.md  Readme.md  main.cpp
2026/Firabases/12_FBWinMsvc/: .gitignore  CMakeLists.txt  History.md  Readme.md  main.cpp  service.h
2026/Firabases/7_FBSDK_Win/: .gitignore  CMakeLists.txt  Readme.md  history.md  setup_sdk.sh
2026/Firabases/7_FBSDK_Win/js-app/: build.gradle.kts
2026/Firabases/7_FBSDK_Win/js-app/src/jsMain/kotlin/: main.kt
2026/Firabases/7_FBSDK_Win/src/: main.cpp
2026/Firabases/8_FBSDK_TUI/: CMakeLists.txt  Readme.md  history.md  setup_sdk.sh
2026/Firabases/8_FBSDK_TUI/src/: main.cpp
2026/Firabases/TUI/: CMakeLists.txt
2026/Firebases/11_FBSDK_TUI/: .gitignore  CMakeLists.txt  History.md  Readme.md  SoftwareDesign.md  dataaccess.cpp  main.cpp  utils.cpp
2026/Firebases/12_FBSDK_TUI/src/test/: CMakeLists.txt  app_test.cpp
2026/Firebases/12_FBSDK_TUI_x/: .gitignore  CMakeLists.txt  History.md  Readme.md
2026/Firebases/12_FBSDK_TUI_x/src/main/: dataaccess.hpp  main.cpp  ui.hpp
2026/Firebases/14_FB_Module/: CMakeLists.txt  History.md  Readme.md  SoftwareDesign.md  UI_Specification.md
2026/Firebases/14_FB_Module/src/: dataaccess.cpp  dataaccess.hpp  main.cpp  test_dataaccess.cpp  utils.cpp  utils.hpp
2026/Firebases/21_FbKmp/native-interop/: CMakeLists.txt  build_shim.sh  firebase.def
2026/Firebases/21_FbKmp/native-interop/include/: firebase_shim.h
2026/Firebases/21_FbKmp/native-interop/src/: firebase_shim.cpp
2026/Firebases/31_FbKmp/shared/nativeInterop/: CMakeLists.txt
2026/Firebases/31_FbKmp/shared/nativeInterop/cinterop/: ftxui.def
2026/Firebases/31_FbKmp/shared/nativeInterop/include/: ftxui_wrapper.h
2026/Firebases/31_FbKmp/shared/nativeInterop/src/: ftxui_wrapper.cpp
2026/Firebases/7_FBSDK_Win/: .gitignore  CMakeLists.txt  Readme.md  history.md  setup_sdk.ps1  setup_sdk.sh
2026/Firebases/7_FBSDK_Win/src/: main.cpp
bs-card/: build.gradle  log2.csv
doc/: GDVM_API_Spec.yaml
fsCustomAuthSvr/: README.md  build.gradle  road-to-iot-firebase-adminsdk-rc191-e00038fdaa.json  settings.gradle
fsJsAgent/: .gitignore  FsJsAgent.ipr  README.md  build.gradle  build.gradle.bk  package.json  settings.gradle
fsSnmpAg/: .gitignore  build.gradle  readme.md
kotjs/: build.gradle  build.gradle.kts  index.html  settings.gradle.kts
kotjs_1/: readme.md
nodeKtSvr/: README.md  package.json
samples/: .gitignore
snmp/: build.gradle  readme.md
(+3559 files in other folders)
