[package]
name = "BSRust"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
burn = { version = "0.14.0", features = ["train", "wgpu", "ndarray"] }
burn-ndarray = "0.14.0"
rand = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
